using UnityEngine;

public static class PlayerAnimParams
{
    public const string MOVEX = "MoveX";
    public const string MOVEY = "MoveY";
    public const string IDLE = "Idle";
    public const string MOVE = "Move";
    public const string ROLL = "Roll";
    public const string COMBOATTACKONE = "ComboAttackOne";
    public const string COMBOATTACKTWO = "ComboAttackTwo";
    public const string COMBOATTACKTHREE = "ComboAttackThree";
    public const string READYSECONDARYACTION = "ReadySecondaryAction";
    public const string ONSECONDARYACTION = "OnSecondaryAction";
    public const string SECONDARYACTION = "SecondaryAction";
}